template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "extensions_IaaSDiagnostics_xmlCfg": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_IaaSDiagnostics_storageAccountName": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_IaaSDiagnostics_storageAccountKey": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "extensions_IaaSDiagnostics_storageAccountEndPoint": {
            "defaultValue": null,
            "type": "SecureString"
        },
        "virtualMachines_app2_vm_name": {
            "defaultValue": "app2-vm",
            "type": "String"
        },
        "virtualMachines_TestVM1_name": {
            "defaultValue": "TestVM1",
            "type": "String"
        },
        "storageAccounts_app2diag_name": {
            "defaultValue": "app2diag",
            "type": "String"
        },
        "networkInterfaces_app2_vm401_name": {
            "defaultValue": "app2-vm401",
            "type": "String"
        },
        "networkInterfaces_testvm1157_name": {
            "defaultValue": "testvm1157",
            "type": "String"
        },
        "networkSecurityGroups_app2_vm_nsg_name": {
            "defaultValue": "app2-vm-nsg",
            "type": "String"
        },
        "networkSecurityGroups_TestVM1_nsg_name": {
            "defaultValue": "TestVM1-nsg",
            "type": "String"
        },
        "networkSecurityGroups_app2_vm1_nsg_name": {
            "defaultValue": "app2-vm1-nsg",
            "type": "String"
        },
        "networkSecurityGroups_test_vm_rbac_nsg_name": {
            "defaultValue": "test-vm-rbac-nsg",
            "type": "String"
        },
        "schedules_shutdown_computevm_app2_vm_name": {
            "defaultValue": "shutdown-computevm-app2-vm",
            "type": "String"
        },
        "extensions_IaaSDiagnostics_name": {
            "defaultValue": "IaaSDiagnostics",
            "type": "String"
        },
        "securityRules_RDP_name": {
            "defaultValue": "RDP",
            "type": "String"
        },
        "securityRules_HTTP_name": {
            "defaultValue": "HTTP",
            "type": "String"
        },
        "securityRules_HTTPS_name": {
            "defaultValue": "HTTPS",
            "type": "String"
        },
        "virtualMachines_app2_vm_id": {
            "defaultValue": "/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Compute/disks/app2-vm_OsDisk_1_d29a1d1efd154295839bf4a3ea024df2",
            "type": "String"
        },
        "virtualMachines_TestVM1_id": {
            "defaultValue": "/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Compute/disks/TestVM1_OsDisk_1_377d4778372e45b490725594aa1cd0c6",
            "type": "String"
        },
        "networkInterfaces_app2_vm401_id": {
            "defaultValue": "/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/Shared-rg/providers/Microsoft.Network/virtualNetworks/shared-vnet/subnets/app2-snet",
            "type": "String"
        },
        "networkInterfaces_testvm1157_id": {
            "defaultValue": "/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/Shared-rg/providers/Microsoft.Network/virtualNetworks/shared-vnet/subnets/app2-snet",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Compute/virtualMachines/app2-vm'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_app2_vm_name')]",
            "apiVersion": "2017-12-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1s"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2016-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_app2_vm_name'),'_OsDisk_1_d29a1d1efd154295839bf4a3ea024df2')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[parameters('virtualMachines_app2_vm_id')]"
                        }
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_app2_vm_name')]",
                    "adminUsername": "sysadmin",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_app2_vm401_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_app2diag_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_app2_vm401_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_app2diag_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Compute/virtualMachines/TestVM1'.",
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('virtualMachines_TestVM1_name')]",
            "apiVersion": "2017-12-01",
            "location": "northeurope",
            "tags": {
                "Env": "Test"
            },
            "scale": null,
            "properties": {
                "hardwareProfile": {
                    "vmSize": "Standard_B1ms"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2012-R2-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "osType": "Windows",
                        "name": "[concat(parameters('virtualMachines_TestVM1_name'),'_OsDisk_1_377d4778372e45b490725594aa1cd0c6')]",
                        "createOption": "FromImage",
                        "caching": "ReadWrite",
                        "managedDisk": {
                            "id": "[parameters('virtualMachines_TestVM1_id')]"
                        },
                        "diskSizeGB": 127
                    },
                    "dataDisks": []
                },
                "osProfile": {
                    "computerName": "[parameters('virtualMachines_TestVM1_name')]",
                    "adminUsername": "sysadmin",
                    "windowsConfiguration": {
                        "provisionVMAgent": true,
                        "enableAutomaticUpdates": true
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_testvm1157_name'))]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[concat('https', '://', parameters('storageAccounts_app2diag_name'), '.blob.core.windows.net', '/')]"
                    }
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', parameters('networkInterfaces_testvm1157_name'))]",
                "[resourceId('Microsoft.Storage/storageAccounts', parameters('storageAccounts_app2diag_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourcegroups/app2-rg/providers/microsoft.devtestlab/schedules/shutdown-computevm-app2-vm'.",
            "type": "microsoft.devtestlab/schedules",
            "name": "[parameters('schedules_shutdown_computevm_app2_vm_name')]",
            "apiVersion": "2016-05-15",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "status": "Enabled",
                "taskType": "ComputeVmShutdownTask",
                "dailyRecurrence": {
                    "time": "2200"
                },
                "timeZoneId": "India Standard Time",
                "notificationSettings": {
                    "status": "Disabled",
                    "timeInMinutes": 30
                },
                "targetResourceId": "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_app2_vm_name'))]",
                "provisioningState": "Succeeded",
                "uniqueIdentifier": "c13ab558-a121-4363-b1af-4b599921e6ae"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_app2_vm_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkInterfaces/app2-vm401'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_app2_vm401_name')]",
            "apiVersion": "2018-02-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9cc24c6f-3de6-4919-8836-3b8f81c268fe",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"f6edfe8b-9c3c-4bff-aa0f-5d9c64222c7f\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.9.1.4",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[parameters('networkInterfaces_app2_vm401_id')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": []
                },
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_app2_vm_nsg_name'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_app2_vm_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkInterfaces/testvm1157'.",
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[parameters('networkInterfaces_testvm1157_name')]",
            "apiVersion": "2018-02-01",
            "location": "northeurope",
            "tags": {
                "Env": "Test"
            },
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "736d050b-ce48-441f-a856-cceb828d3de1",
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "etag": "W/\"3411d91a-011e-49e7-bd42-daeefb861b10\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "privateIPAddress": "10.9.1.6",
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[parameters('networkInterfaces_testvm1157_id')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "dnsSettings": {
                    "dnsServers": [],
                    "appliedDnsServers": [],
                    "internalDomainNameSuffix": "xpeeotui03quvc05vcbxdz2xyd.fx.internal.cloudapp.net"
                },
                "macAddress": "00-0D-3A-B4-67-F0",
                "enableAcceleratedNetworking": false,
                "enableIPForwarding": false,
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestVM1_nsg_name'))]"
                },
                "primary": true
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestVM1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/app2-vm-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_app2_vm_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "eacf469a-9edd-4c2f-b052-32ddd0710572",
                "securityRules": [],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"66b6f1fa-0174-4150-8b38-6b3a1e9141e5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"66b6f1fa-0174-4150-8b38-6b3a1e9141e5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"66b6f1fa-0174-4150-8b38-6b3a1e9141e5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"66b6f1fa-0174-4150-8b38-6b3a1e9141e5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"66b6f1fa-0174-4150-8b38-6b3a1e9141e5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"66b6f1fa-0174-4150-8b38-6b3a1e9141e5\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/app2-vm1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_app2_vm1_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "db963217-4ae6-4efd-8a46-3ce0e3143e3f",
                "securityRules": [],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"55ae35a6-c216-43ed-8e4b-5ba7a35f64fc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"55ae35a6-c216-43ed-8e4b-5ba7a35f64fc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"55ae35a6-c216-43ed-8e4b-5ba7a35f64fc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"55ae35a6-c216-43ed-8e4b-5ba7a35f64fc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"55ae35a6-c216-43ed-8e4b-5ba7a35f64fc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"55ae35a6-c216-43ed-8e4b-5ba7a35f64fc\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/test-vm-rbac-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_test_vm_rbac_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "985992a0-5371-4a38-a246-fb3fd3ea2f54",
                "securityRules": [],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"35dea861-c283-46c6-a1b1-6f76d1a3f702\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"35dea861-c283-46c6-a1b1-6f76d1a3f702\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"35dea861-c283-46c6-a1b1-6f76d1a3f702\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"35dea861-c283-46c6-a1b1-6f76d1a3f702\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"35dea861-c283-46c6-a1b1-6f76d1a3f702\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"35dea861-c283-46c6-a1b1-6f76d1a3f702\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/TestVM1-nsg'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_TestVM1_nsg_name')]",
            "apiVersion": "2018-02-01",
            "location": "northeurope",
            "tags": {
                "Env": "Test"
            },
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "resourceGuid": "9e3b6016-6bf4-421c-9377-ad479e9f08de",
                "securityRules": [
                    {
                        "name": "HTTP",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 300,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "HTTPS",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "443",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 320,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "RDP",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 340,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ],
                "defaultSecurityRules": [
                    {
                        "name": "AllowVnetInBound",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowAzureLoadBalancerInBound",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow inbound traffic from azure load balancer",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "AzureLoadBalancer",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllInBound",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all inbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Inbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowVnetOutBound",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to all VMs in VNET",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "VirtualNetwork",
                            "access": "Allow",
                            "priority": 65000,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "AllowInternetOutBound",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Allow outbound traffic from all VMs to Internet",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "Internet",
                            "access": "Allow",
                            "priority": 65001,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    },
                    {
                        "name": "DenyAllOutBound",
                        "etag": "W/\"207d186f-badc-486f-ae36-644225df6901\"",
                        "properties": {
                            "provisioningState": "Succeeded",
                            "description": "Deny all outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 65500,
                            "direction": "Outbound",
                            "sourcePortRanges": [],
                            "destinationPortRanges": [],
                            "sourceAddressPrefixes": [],
                            "destinationAddressPrefixes": []
                        }
                    }
                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Storage/storageAccounts/app2diag'.",
            "type": "Microsoft.Storage/storageAccounts",
            "sku": {
                "name": "Standard_LRS",
                "tier": "Standard"
            },
            "kind": "Storage",
            "name": "[parameters('storageAccounts_app2diag_name')]",
            "apiVersion": "2018-07-01",
            "location": "northeurope",
            "tags": {},
            "scale": null,
            "properties": {
                "networkAcls": {
                    "bypass": "AzureServices",
                    "virtualNetworkRules": [],
                    "ipRules": [],
                    "defaultAction": "Allow"
                },
                "supportsHttpsTrafficOnly": false,
                "encryption": {
                    "services": {
                        "file": {
                            "enabled": true
                        },
                        "blob": {
                            "enabled": true
                        }
                    },
                    "keySource": "Microsoft.Storage"
                }
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Compute/virtualMachines/app2-vm/extensions/IaaSDiagnostics'.",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('virtualMachines_app2_vm_name'), '/', parameters('extensions_IaaSDiagnostics_name'))]",
            "apiVersion": "2017-12-01",
            "location": "northeurope",
            "scale": null,
            "properties": {
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "StorageAccount": "app2diag",
                    "xmlCfg": "[parameters('extensions_IaaSDiagnostics_xmlCfg')]"
                },
                "publisher": "Microsoft.Azure.Diagnostics",
                "type": "[parameters('extensions_IaaSDiagnostics_name')]",
                "typeHandlerVersion": "1.5",
                "protectedSettings": {
                    "storageAccountName": "[parameters('extensions_IaaSDiagnostics_storageAccountName')]",
                    "storageAccountKey": "[parameters('extensions_IaaSDiagnostics_storageAccountKey')]",
                    "storageAccountEndPoint": "[parameters('extensions_IaaSDiagnostics_storageAccountEndPoint')]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('virtualMachines_app2_vm_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/TestVM1-nsg/securityRules/HTTP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_TestVM1_nsg_name'), '/', parameters('securityRules_HTTP_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "80",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 300,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestVM1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/TestVM1-nsg/securityRules/HTTPS'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_TestVM1_nsg_name'), '/', parameters('securityRules_HTTPS_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "443",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 320,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestVM1_nsg_name'))]"
            ]
        },
        {
            "comments": "Generalized from resource: '/subscriptions/8651750c-6e5c-4f33-aaaf-ae96b7d27d45/resourceGroups/app2-rg/providers/Microsoft.Network/networkSecurityGroups/TestVM1-nsg/securityRules/RDP'.",
            "type": "Microsoft.Network/networkSecurityGroups/securityRules",
            "name": "[concat(parameters('networkSecurityGroups_TestVM1_nsg_name'), '/', parameters('securityRules_RDP_name'))]",
            "apiVersion": "2018-02-01",
            "scale": null,
            "properties": {
                "provisioningState": "Succeeded",
                "protocol": "TCP",
                "sourcePortRange": "*",
                "destinationPortRange": "3389",
                "sourceAddressPrefix": "*",
                "destinationAddressPrefix": "*",
                "access": "Allow",
                "priority": 340,
                "direction": "Inbound",
                "sourcePortRanges": [],
                "destinationPortRanges": [],
                "sourceAddressPrefixes": [],
                "destinationAddressPrefixes": []
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_TestVM1_nsg_name'))]"
            ]
        }
    ]
}
